--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@mysten/dapp-kit": "^0.14.28",
-    "@mysten/sui": "^1.14.0",
+    "@mysten/sui": "1.24.0",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.4",
     "clsx": "^2.1.1",
@@ -29,6 +29,7 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@types/node": "^25.2.2",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.0",
