feat: refine AI panel flow and wire Kimi backend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,13 +18,15 @@ STORAGE_PRIVATE_KEY=your_storage_wallet_private_key
 OG_KV_STREAM_ID=your_stream_id
 OG_KV_NODE_RPC=http://kv_node_address:6789
 
-# 0G Compute Network (AI)
+# Kimi (Moonshot) OpenAI-compatible API
 COMPUTE_PRIVATE_KEY=your_compute_wallet_private_key
-OG_COMPUTE_API_KEY=app-sk-REDACTED
-OG_COMPUTE_BASE_URL=https://compute-network-6.integratenetwork.work/v1/proxy
-OG_COMPUTE_MODEL=anthropic/claude-sonnet-4.5
-OG_COMPUTE_MAX_TOKENS=8192
-AI_PROMPT_PATH=../prompt.MD
+OG_COMPUTE_API_KEY=sk-REDACTED
+OG_COMPUTE_BASE_URL=https://api.moonshot.cn/v1
+OG_COMPUTE_MODEL=kimi-k2.5
+OG_COMPUTE_MAX_TOKENS=50000
+OG_COMPUTE_TEMPERATURE=0.6
+OG_COMPUTE_THINKING_TYPE=disabled
+AI_PROMPT_PATH=../prompt.md
 
 # Smart Contracts (fill after deployment)
 DEMO_USDC_ADDRESS=0x0000000000000000000000000000000000000000
