--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -70,6 +70,11 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
+.env
+.env.test
+.env.production
+.env.local
+.env.*.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
