--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,7 +26,7 @@ OG_COMPUTE_MODEL=kimi-k2.5
 OG_COMPUTE_MAX_TOKENS=50000
 OG_COMPUTE_TEMPERATURE=0.6
 OG_COMPUTE_THINKING_TYPE=disabled
-AI_PROMPT_PATH=../prompt.md
+AI_PROMPT_PATH=./prompt.md
 
 # Smart Contracts (fill after deployment)
 DEMO_USDC_ADDRESS=0x0000000000000000000000000000000000000000
