--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -29,6 +29,7 @@ WORKDIR /app
 
 ENV NODE_ENV=production
 ENV AI_PROMPT_PATH=/app/prompt.md
+ENV AI_PROMPT_PATH=/app/prompt.md
 
 RUN apt-get update \
   && apt-get install -y --no-install-recommends openssl \
@@ -38,6 +39,7 @@ COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/backend/dist ./backend/dist
 COPY --from=build /app/backend/prisma ./backend/prisma
 COPY --from=build /app/backend/package.json ./backend/package.json
+COPY prompt.md ./prompt.md
 COPY prompt.md ./prompt.md
 
 EXPOSE 3001
